# iDOR-Scanner

./: .gitignore  README.md  idor_scanner.py  pyproject.toml
.claude/skills/idor-scan/: SKILL.md
.github/workflows/: ci.yml
example/: README.md  ci_flask_demo_config.yaml  ci_flask_demo_openapi_config.yaml  flask_idor_demo.py  flask_idor_demo_config.json  flask_idor_demo_config_burp_history.json  flask_idor_demo_config_burp_mcp.json  flask_idor_demo_config_burp_mcp_openapi.json  flask_idor_demo_config_llm_login.json  flask_idor_demo_config_ollama.json  flask_idor_demo_config_openapi.json  flask_idor_demo_config_tokens_only.json  flask_idor_demo_openapi.json
example/oidc-http/: flask_oidc_demo.py  flask_oidc_demo_openapi.json  oidc_config.yaml  oidc_config_comprehensive.yaml  oidc_to_service3_config.yaml  oidc_to_service3_openapi.yaml
example/post-http/: flask_post_demo.py  flask_post_demo_openapi.json  post_config.yaml  post_config_comprehensive.yaml
tests/: test_idor_scanner.py
